# GigiBlockchain

./: README.md  docker-compose.yml
miner/: CMakeLists.txt  Dockerfile
miner/src/: miner.cpp
node/: CMakeCache.txt  CMakeLists.txt  Dockerfile  Dockerfile.dev  Makefile  build.txt  cmake_install.cmake  daemon  docker-compose.yml  message.pb.cc  message.pb.h
node/protos/: message.proto
node/src/: Block.hpp  BlockChain.hpp  Peer.hpp  daemon.cpp
